--- a/thesis.tex
+++ b/thesis.tex
@@ -206,10 +206,10 @@
 %\include{text/introduction}
 %\include{text/theory}
 %\include{text/methods}
-\include{text/bilayers}
-\include{text/targeted_opt}
+%\include{text/bilayers}
+%\include{text/targeted_opt}
 %\include{text/general_networks}
-%\include{text/quasi2d}
+\include{text/quasi2d}
 %\include{text/procrystals}
 %\include{text/ph}
 %\include{text/conclusions}
